--- a/_posts/2018-06-30-demo-post.md
+++ b/_posts/2018-06-30-demo-post.md
@@ -1,11 +1,11 @@
 ---
 title: 'Demo Post'
 date: 2018-06-30 00:00:00
-description: This page is a demo that shows everything you can do inside portfolio and blog posts.
+description: I queried Indeed.com for jobs with the keywords Data Analyst & Scientist, and Business Analyst & Intelligence to **get a sense of the most demanded skills** for these positions, and **identifying employees with growing data teams**.
 featured_image: '/images/demo/demo-square.jpg'
 ---
 
-![](/images/demo/demo-landscape.jpg)
+![](/images/IndeedScraper/indeed-logo.jpg)
 
 ## Demo content
 
