Fixed the image references

--- a/_posts/2022-12-23-chatGTP.md
+++ b/_posts/2022-12-23-chatGTP.md
@@ -7,7 +7,7 @@ featured_image: /images/ChatGTP/ChatGTP.jpg
 ---
 
 ### Disclaimer:
-I let ChatGTP write a blog post about its own impact on the world of Data Science and Analysis and programming in python! I ordered ChatGTP to write in a certain style because I found the initial text quite boring.
+I let ChatGTP write a blog post about its own impact on the world of Data Science and Analysis and programming in python!
 I also let it formulate the description and conceptualize the thumbnail picture which was then created by DeepAI's text-to-image generator.
 
 The instruction I gave were as follows:
@@ -36,7 +36,7 @@ In conclusion, ChatGPT is an amazing AI tool that is changing the game in data s
 
 ## (Personal) Opinion
 
-To be fair, the text is quite funny, but in certain parts also repetitive and inaccurate (I am not a Data Scientist nor a Data Analyst, yet). I have not even read it thoroughly.
+ I ordered ChatGTP to write in a certain style because I found the initial text quite boring and to be fair, it turned out quite funny, but in certain parts also repetitive and inaccurate (I am not a Data Scientist nor a Data Analyst, yet). I have not even read it thoroughly.
 
 Nonetheless, the text also mentions a usability I have not thought of before. ChatGTP can be a tool to understand code and learn from it. My initial thought was that many users will become less proficient in their coding skills, letting the AI do all the work. However, most of the times the code might not be doing what it does, or inefficient. A good data scientist or software engineer should still read the code, which is thankfully (excessively) commented and adjust it when needed.
 
@@ -50,8 +50,8 @@ I let the image-AI generate multiple thumbnails white slight alterations of the 
 Here are some of the (creepy) results:
 
 <div class="gallery" data-columns="1">
-    <img src="/images/FirstThumbnail/.jpg">
-    <img src="/images/CreepyThumbnail/.jpg">
-    <img src="/images/BigScreen/.jpg">
-    <img src="/images/ArrowsEverywhere/.jpg">
+    <img src="/images/ChatGTP/FirstThumbnail/.jpg">
+    <img src="/images/ChatGTP//CreepyThumbnail/.jpg">
+    <img src="/images/ChatGTP//BigScreen/.jpg">
+    <img src="/images/ChatGTP//ArrowsEverywhere/.jpg">
 </div>
