Changed thumbnail, and photo gallery for ChatGTP post

--- a/_posts/2022-12-23-chatGTP.md
+++ b/_posts/2022-12-23-chatGTP.md
@@ -3,7 +3,7 @@ title: 'ChatGPT: The AI Tool Revolutionizing Data Science and Analysis'
 subtitle: A robotic reflection
 date: 2022-12-23 00:00:00
 description: 'ChatGPT: The AI tool revolutionizing the world of data science with natural language commands and code optimization capabilities.'
-featured_image: /images/ChatGTP/ChatGTP.jpg
+featured_image: /images/ChatGTP/DataScientist.jpg
 ---
 
 ### Disclaimer:
@@ -50,8 +50,8 @@ I let the image-AI generate multiple thumbnails white slight alterations of the 
 Here are some of the (creepy) results:
 
 <div class="gallery" data-columns="1">
-    <img src="/images/ChatGTP/FirstThumbnail.jpg">
-    <img src="/images/ChatGTP/CreepyThumbnail.jpg">
-    <img src="/images/ChatGTP/BigScreen.jpg">
-    <img src="/images/ChatGTP/ArrowsEverywhere.jpg">
+    <img src="/images/ChatGTP/DataAnalyst_Dashboards.jpg">
+    <img src="/images/ChatGTP/DataAnalyst_Smiling.jpg">
+    <img src="/images/ChatGTP/DataAnalyst_Standing.jpg">
+    <img src="/images/ChatGTP/DataScientist.jpg">
 </div>
